--- a/app/assets/stylesheets/pictures.css.scss
+++ b/app/assets/stylesheets/pictures.css.scss
@@ -1,12 +1,3 @@
-.pictures-container {
- 	display: flex; 	
- 	flex-direction: row;
- 	flex-wrap: wrap; 	
- 	&-el {
- 		img {
- 			margin: 5px;
- 			width: 200px;
- 			height: 200px;
- 		}
- 	}
- }
+.carousel-container {
+	margin-top: 45px;
+}
