--- a/app/views/events/index.haml
+++ b/app/views/events/index.haml
@@ -2,10 +2,12 @@
 	- @events.each do |event|
 		.pictures-container-el
 			= link_to event_path(event.id) do				
-				= cl_image_tag event.pictures.last(8).first.image
+				= cl_image_tag event.pictures.last(8).first.try(:image)
 				.pictures-container-el-name
 					event n°
 					= event.name
 				.pictures-container-el-date
 					= event.created_at.strftime("%I:%M%p")
 					= event.updated_at.strftime("- %I:%M%p")
+				.pictures-container-el-day
+					= event.created_at.strftime("%d/%m/%y")					
