--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>BigBrotherServer</title>
+    <meta property="og:image" content="http://localhost:3000/assets/logo-445a71ecefb11640b12bf515cabf1b34c8d7682ec2fb418c7ece1feb82b973bf.jpg"/>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
