success favicon logo meta tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BigBrotherServer</title>
-    <meta property="og:image" content="http://localhost:3000/assets/logo-445a71ecefb11640b12bf515cabf1b34c8d7682ec2fb418c7ece1feb82b973bf.jpg"/>
+    <title>BigBrotherServer</title>    
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= favicon_link_tag 'logo.jpg' %>
   </head>
 
   <body>
